actually fixed the nickname align
the change was in my custom.css instead in profile.css smh

--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -38,7 +38,7 @@
 .bannerOverlayPopout-1clJ34 {
 	display: none;
 }
-.nickname-t08Mck.fontDisplay-3Gtuks.base-21yXnu.size20-9iTTnl,
+.nickname-t08Mck.base-21yXnu.size20-9iTTnl,
 .headerTagWithNickname-1U8zZH.headerTag-3GXZkV.nameTag-H6kSJ0,
 .headerTagNoNickname-3tGHj6.headerTag-3GXZkV.nameTag-H6kSJ0 {
 	text-align: center;
